# huntington_hill

./: .gitignore  README.md  pyproject.toml
huntington_hill/: __init__.py  apportionment.py
tests/: test_huntignton_hill.py  test_huntington_hill.py
